# netmon

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  conftest.py  daily-summary  daily_summary.py  docker-compose.yml  flow-analyzer  flow_analyzer.py  index.html  netmon  netmon.env.example  netmon.py  pyproject.toml  test_config.py  test_daily_summary.py  test_fakes.py  test_flow_analyzer.py  test_netmon.py  test_ti_updater.py  test_web_server.py  ti-updater  ti_updater.py  web-server  web_server.py
